Fixed Calc layout/spacing. Display now updates with each number button clicked.

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 .display {
     height: 200px;
     width: 100%;
+    font-size: 5em;
+    text-align: center;
 }
 
 .optionContainer {
